src/test/resources/annotation/output_missing_declaration.wdl
workflow hello {

  output {
    Int i = <error descr="No declaration found for 'l'">l</error>
  }
}
